fix: Misaligned bullet

--- a/style/style.less
+++ b/style/style.less
@@ -31,8 +31,8 @@ ul.stepper {
             left: 10px;
 	    border-width: 3px;
             text-align: center;
-            line-height: 17px;
-	    font-size: 1.5em;
+            line-height: 15px;
+	    font-size: 1.3em;
         }
         & > * {
             padding-left: 24px
